<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_layout"
    tools:context="rahulkumardas.rangde.LoginActivity">

    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/concrete_seamless"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/blueText"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/app_name"/>
        <View
            android:layout_width="3.5dp"
            android:layout_height="match_parent"
            android:background="@color/appBarMargin"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/blueText"
            android:textSize="20dp"
            android:gravity="center"
            android:text="Login"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/appBarMargin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="@mipmap/concrete_seamless"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:background="@color/colorTitleBack"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/textColor"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/background_edit_text"
            android:hint="Email Address"
            android:textSize="25dp"
            android:id="@+id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/background_edit_text"
            android:hint="password"
            android:textSize="25dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:text="@string/login"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/not_a_member"
            android:textColor="@color/textColor" />
    </LinearLayout>
</LinearLayout>
